--- a/src/app.css
+++ b/src/app.css
@@ -23,8 +23,17 @@ h1 {
 	font-size: 4.17rem;
 }
 
+div {
+	margin: 1rem;
+}
+
 p {
 	max-width: 900px;
+	margin: 1rem;
+}
+
+button {
+	margin: 1rem;
 }
 
 input, button {
