--- a/src/app.css
+++ b/src/app.css
@@ -24,24 +24,29 @@ code {
 	font-family: monospace;
 }
 
+main {
+	font-size: 2vmax;
+}
+
 h1, h2, h3, p, button {
 	color: white;
-	font-size: x-large;
+	/* font-size: x-large; */
 }
 
 h1 {
-	font-size: 4.17em;
-}
-
-h2 {
 	font-size: 2.59em;
 }
 
-h3 {
+h2 {
 	font-size: 1.61em;
 }
 
+/* h3 {
+	font-size: 1.61em;
+} */
+
 p {
+	font-size: 1em;
 	max-width: 900px;
 	margin: 1rem;
 }
@@ -52,8 +57,8 @@ button {
 }
 
 input, button {
-	border-radius: 0.2rem;
+	border-radius: 0.2em;
 	color: black;
-	font-size: 1.69rem;
-	padding: 0.38rem;
+	font-size: 1em;
+	padding: 0.24em;
 }
