--- a/src/app.css
+++ b/src/app.css
@@ -28,7 +28,7 @@ main {
 	font-size: 2vmax;
 }
 
-h1, h2, h3, p, button {
+h1, h2, h3, p, button, li {
 	color: white;
 	/* font-size: x-large; */
 	text-align: center;
@@ -49,6 +49,11 @@ h2 {
 p {
 	font-size: 1em;
 	max-width: 900px;
+	margin: 1rem;
+}
+
+li {
+	text-align: left;
 	margin: 1rem;
 }
 
