--- a/src/app.css
+++ b/src/app.css
@@ -24,8 +24,8 @@ code {
 	font-family: monospace;
 }
 
-main {
-	font-size: 2vmax;
+html {
+	font-size: calc(1em + 0.2vw);
 }
 
 h1, h2, h3, p, button, li {
@@ -35,21 +35,25 @@ h1, h2, h3, p, button, li {
 }
 
 h1 {
-	font-size: 2.59em;
+	font-size: 4.17em;
 }
 
 h2 {
-	font-size: 1.61em;
+	font-size: 2.59em;
 }
 
-/* h3 {
+h3 {
 	font-size: 1.61em;
-} */
+}
 
 p {
 	font-size: 1em;
 	max-width: 900px;
 	margin: 1rem;
+}
+
+span {
+	font-size: 1em;
 }
 
 li {
@@ -65,6 +69,6 @@ button {
 input, button {
 	border-radius: 0.2em;
 	color: black;
-	font-size: 1em;
+	font-size: 1.61em;
 	padding: 0.24em;
 }
