--- a/src/app.css
+++ b/src/app.css
@@ -25,7 +25,7 @@ code {
 }
 
 html {
-	font-size: calc(1em + 0.2vw);
+	font-size: calc(1em + 0.5vw);
 }
 
 h1, h2, h3, p, button, li {
@@ -49,7 +49,7 @@ h3 {
 p {
 	font-size: 1em;
 	max-width: 900px;
-	margin: 1rem;
+	margin: 1em;
 }
 
 span {
@@ -58,17 +58,17 @@ span {
 
 li {
 	text-align: left;
-	margin: 1rem;
+	margin: 1em;
 }
 
 button {
 	color: black;
-	margin: 1rem;
+	margin: 1em;
 }
 
 input, button {
 	border-radius: 0.2em;
 	color: black;
-	font-size: 1.61em;
+	font-size: 1em;
 	padding: 0.24em;
 }
