Fix page view tracking to you page
Guessing that Plausible tracker doesn't like the use of replaceState.

Also improved the experience for sharing and added more granular analytics there.

Closes #31

--- a/src/app.css
+++ b/src/app.css
@@ -24,6 +24,11 @@ code {
 	font-family: monospace;
 }
 
+dialog {
+	background-color: var(--beer);
+	border-radius: 0.2em;
+}
+
 html {
 	font-size: calc(1em + 0.5vw);
 }
